[package]
name = "debug-async-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = { version = "1.6.0", path = "../async-io" }
env_logger = "0.9.0"
humantime = "2.1.0"
log = "0.4.17"
simple-executor = { version = "0.1.0", path = "../simple-executor" }

[features]
